--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -10,7 +10,9 @@
     "@babel/core": "^7.6.0",
     "@babel/node": "^7.8.0",
     "@babel/preset-env": "^7.6.0",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^9.1.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^28.2.0",
