--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -8,7 +8,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.24.5",
-		"@babel/node": "^7.8.0",
+		"@babel/node": "^7.23.9",
 		"@babel/preset-env": "^7.24.5",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^6.8.0",
@@ -16,5 +16,8 @@
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jest": "^22.17.0",
 		"jest": "^24.9.0"
+	},
+	"dependencies": {
+		"@babel/cli": "^7.24.5"
 	}
 }
