--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -3,9 +3,9 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "^10.7.3"
+    "chai": "^4.5.0",
+    "mocha": "^10.7.3",
+    "sinon": "^18.0.0"
   },
-  "dependencies": {
-    "chai": "^4.2.0"
-  }
+  "dependencies": {}
 }
